--- a/custom-events: events.hbs
+++ b/custom-events: events.hbs
@@ -7,23 +7,25 @@ into the {body} tag of the default.hbs template --}}
 {{#post}}
 {{!-- Everything inside the #post block pulls data from the post --}}
 
+
 <main id="site-main" class="site-main">
 
 {{> feature-image-to-banner}}
 
 <article class="article {{post_class}} {{#match @custom.post_image_style "Full"}}image-full{{else match @custom.post_image_style "=" "Small"}}image-small{{/match}}">
-
     <section class="gh-content gh-canvas">
         {{content}}
-{{/post}}
 
-    </section>
-    {{#get "pages" filter="slug:~^'maps-'"  limit="all" }}
-        {{#foreach pages}}
-            <h1 class="post-card-title">{{title}}</h1>
-        {{/foreach}}
+   </section>
+    {{#get "posts" filter="featured:true,featured:false" limit="5"}}
+        {{> "carousel-slider"}}
     {{/get}}
 
-
+    {{#get "posts" filter="slug:~^'event-'"  limit="all" include="tags,authors"}}
+        {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+        {{> "homepage-post-feed"}}
+    {{/get}}
+ 
 </article>
 </main>
+{{/post}}
