--- a/partials/site-footer.hbs
+++ b/partials/site-footer.hbs
@@ -27,7 +27,7 @@
                     <ul>
                         {{!-- <li class="first"><a href="#">About</a></li> --}}
                         <li><a href="/about">About</a></li>
-                        <li><a href="/maps">Maps</a></li>
+                        <li><a href="/maps">Map</a></li>
                         <li><a href="/research">Research</a></li>
                         {{!-- <li><a href="/policy">Policy</a></li> --}}
                         {{!-- <li><a href="/education">Education</a></li> --}}
