--- a/tag.hbs
+++ b/tag.hbs
@@ -27,7 +27,7 @@
             <div class="post-card-content">
             <div class="post-card-content-link">
                 <header class="post-card-header">
-                    <h2 class="post-card-title">#{{name}}</h2>
+                    <h1 class="article-title">#{{name}}</h1>
                 </header>
                 <div class="post-card-excerpt">
                     {{#if description}}
