--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -40,6 +40,31 @@ production stylesheet in assets/built/screen.css
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Romana BT';
+    src: url('/assets/font/romanboldbt/RomanaBT-Bold.woff2') format('woff2'),
+         url('/assets/font/romanboldbt/RomanaBT-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/assets/font/roboto/Roboto-Regular.eot');
+    src: url('/assets/font/roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/assets/font/roboto/Roboto-Regular.woff2') format('woff2'),
+        url('/assets/font/roboto/Roboto-Regular.woff') format('woff'),
+        url('/assets/font/roboto/Roboto-Regular.ttf') format('truetype'),
+        url('/assets/font/roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
+
 :root {
 
     /* Colours */
@@ -54,9 +79,45 @@ production stylesheet in assets/built/screen.css
     --color-wash: #e5eff5;
     --color-darkmode: #151719;
     
-    /* Special Colors */
+    /* Special Color */
     --color-soft-red: #E74C3C;
     --color-soft-grey: #cccccc;
+    --color-site-cover-filter: #006064;
+
+    /* 
+        
+    */
+    --color-theme-blue: rgba(70, 93, 162, 1);
+    --color-theme-lightblue: rgba(122, 148, 213, 1);
+    --color-theme-white: rgba(239, 241, 246, 1);
+    --color-theme-cyan: rgba(145, 213, 210, 1);
+    --color-theme-orange: rgba(227, 161, 82, 1);
+    /* 
+        TODO:
+        blue: document navigation
+        orange: nav button
+                floating subscribe button
+        white: background
+
+        logo:
+            use extended, right aligned, (the one with overlay)
+            for mobile version, use a compact
+
+        put top view 
+
+        pdf load wrong on resize
+
+        pdf  bar color:
+            bg-color: theme-blue
+            text-color: theme-white
+        
+        make map full screen 
+        delete map left-right padding
+        change content top padding smaller
+        delete map banner
+        delete every padding around the map
+    */
+
 
     /*
     An accent color is also set by Ghost itself in
@@ -71,8 +132,8 @@ production stylesheet in assets/built/screen.css
     --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     --font-serif: Georgia, Times, serif;
     --font-upheaval: 'Upheaval TT (BRK)', serif;
-    --font-mono: Menlo, Courier, monospace;
-
+    --font-romanboldbt: 'Romana BT', serif;
+    --font-roboto: "Roboto", serif;
 }
 
 
@@ -117,6 +178,20 @@ production stylesheet in assets/built/screen.css
 }
 
 .site-header-cover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    filter: contrast(1.5);
+}
+
+.site-header-cover-filter {
+    background-color: var(--color-site-cover-filter);
     position: absolute;
     top: 0;
     right: 0;
@@ -232,6 +307,58 @@ production stylesheet in assets/built/screen.css
 .has-upheaval-title .kg-toggle-card .kg-toggle-heading-text,
 .has-upheaval-title .kg-header-card h2.kg-header-card-header {
     font-family: var(--font-upheaval);
+}
+
+.has-romanaboldbt-title .site-title,
+.has-romanaboldbt-title .author-title,
+.has-romanaboldbt-title .post-card-title,
+.has-romanaboldbt-title .footer-cta-title,
+.has-romanaboldbt-title h1,
+.has-romanaboldbt-title h2,
+.has-romanaboldbt-title h3,
+.has-romanaboldbt-title h4,
+.has-romanaboldbt-title h5,
+.has-romanaboldbt-title .article-title,
+.has-romanaboldbt-title .gh-content > [id],
+.has-romanaboldbt-title .kg-toggle-card .kg-toggle-heading-text,
+.has-romanaboldbt-title .kg-header-card h2.kg-header-card-header {
+    font-family: var(--font-romanboldbt);
+}
+
+.has-roboto-title .site-title,
+.has-roboto-title .author-title,
+.has-roboto-title .post-card-title,
+.has-roboto-title .footer-cta-title,
+.has-roboto-title h1,
+.has-roboto-title h2,
+.has-roboto-title h3,
+.has-roboto-title h4,
+.has-roboto-title h5,
+.has-roboto-title .article-title,
+.has-roboto-title .gh-content > [id],
+.has-roboto-title .kg-toggle-card .kg-toggle-heading-text,
+.has-roboto-title .kg-header-card h2.kg-header-card-header {
+    font-family: var(--font-roboto);
+}
+
+.viewport.has-sans-body {
+    font-family: var(--font-sans);
+  }
+  
+.viewport.has-serif-body {
+    font-family: var(--font-serif);
+}
+
+.viewport.has-upheaval-body {
+    font-family: var(--font-upheaval);
+}
+
+.viewport.has-romanboldbt-body {
+    font-family: var(--font-romanboldbt);
+}
+
+.viewport.has-roboto-body {
+    font-family: var(--font-roboto);
 }
 
 .has-cover .site-title {
@@ -851,11 +978,11 @@ production stylesheet in assets/built/screen.css
         line-height: 1.4;
     }
 
-    #gh-head .nav a {
+    /* #gh-head .nav a {
         font-size: 2.6rem;
         font-weight: 600;
         text-transform: none;
-    }
+    } */
 
     #gh-head .nav li {
         opacity: 0;
@@ -2770,17 +2897,7 @@ html.auto-color .footer-cta-title {
 /* TODO: Customize font family for logical components: "Title" and "Body" defined by developer */
 
 /* Default version: One choice fits all */
-.viewport.has-sans-body {
-    font-family: var(--font-sans);
-  }
-  
-.viewport.has-serif-body {
-    font-family: var(--font-serif);
-}
 
-.viewport.has-upheaval-body {
-    font-family: var(--font-upheaval);
-}
 
 /* Title */
 
