change post card feeds format with bootstrap

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -95,8 +95,8 @@ production stylesheet in assets/built/screen.css
     /* 
         TODO:
         blue: document navigation
-        orange: nav button
-                floating subscribe button
+        v orange: nav button
+        x        floating subscribe button
         white: background
 
         logo:
