--- a/partials/feature-image-to-banner.hbs
+++ b/partials/feature-image-to-banner.hbs
@@ -19,6 +19,7 @@ This script
 .article-image .image-container img {
     display: block;
     width: 100%;
+    min-height: 250px;
 }
 .article-image .image-container:after {
     content: "";
