--- a/partials/nav-megamenu/maps.hbs
+++ b/partials/nav-megamenu/maps.hbs
@@ -16,7 +16,7 @@
             <div class="row my-3">
                 {{#get "pages" filter="slug:~^'maps-'" limit="all"}}
                     {{#foreach pages}}
-                        <div class="col-md-12 col-lg-4 mb-3 mb-lg-0">
+                        <div class="col-sm-6 col-md-6 col-lg-4 mb-12 mb-lg-0">
                             <div class="pt-2">
                                 <div style="display:flex; flex-direction: column; align-items:center">
                                     <a href="{{url}}">
