--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -17,7 +17,7 @@
 
     {{!-- {{> nav-megamenu/education }} --}}
 
-    {{> nav-megamenu/events }}
+    {{> nav-megamenu/media }}
 </nav>
 {{!-- Sample megamenu content
 
