--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -44,7 +44,7 @@ div.gh-head
 
 .gh-head-menu .nav-item .nav-link.active {
   font-size: 2.4rem;
-  background-color: var(--color-soft-red);
+  background-color: var(--color-theme-orange);
   /* round-corner */
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -123,6 +123,7 @@ div.gh-head
 /* Style for content inside dropdown menu */
 
 .dropdown .dropdown-menu a {
+  font-size: 1.8rem;
   position: relative;
   display: inline-block;
   margin-bottom: 1rem;
@@ -135,7 +136,7 @@ div.gh-head
   bottom: 0;
   width: 100%;
   height: 2px;
-  background-color: var(--color-soft-red);
+  background-color: var(--color-theme-orange);
   transform: scaleX(0);
   transform-origin: left center;
   transition: transform 0.2s ease-out;
@@ -166,18 +167,18 @@ div.gh-head
   line-height: 2rem;
 }
 
-.dropdown .pt-2 {
+/* .dropdown .pt-2 {
   width: 100%;
 }
 
 .dropdown .col-md-12 {
   width: 33%;
-}
+} */
 
 .dropdown .dropdown-container {
   padding: 10px;
 }
-
+/* 
 @media (max-width: 800px) {
   .dropdown .dropdown-container {
       width: 100%;
@@ -194,4 +195,4 @@ div.gh-head
     position: relative;
     left: 2%;
   }
-}
+} */
