--- a/default.hbs
+++ b/default.hbs
@@ -52,6 +52,8 @@
     has-serif-title
 {{else match @custom.title_font_family "=" "Upheaval serif"}}
     has-upheaval-title
+{{else match @custom.title_font_family "=" "Romana BT"}}
+    has-romanaboldbt-title
 {{/match}}
 
 {{#match @custom.body_font_family "=" "Modern sans-serif"}} 
@@ -60,6 +62,8 @@
     has-serif-body
 {{else match @custom.body_font_family "=" "Upheaval serif"}}
     has-upheaval-body
+{{else match @custom.body_font_family "=" "Romana BT"}}
+    has-romanaboldbt-body
 {{/match}}
 
 ">
