--- a/index.hbs
+++ b/index.hbs
@@ -8,6 +8,7 @@ into the {body} of the default.hbs template --}}
         {{#if @site.cover_image}}
             {{!-- This is a responsive image, it loads different sizes depending on device
             https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+            <div class="site-header-cover-filter"></div>
             <img class="site-header-cover"
                 srcset="{{img_url @site.cover_image size="s"}} 300w,
                         {{img_url @site.cover_image size="m"}} 600w,
