--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,5 +1,6 @@
-<article class="post-card ">
-    <div class="post-card-content">
+
+<article class="post-card row">
+    <div class="post-card-content col-7 col-sm-8 col-md-9 col-lg-9 col-xl-9">
         <div class="post-card-tags">
             {{#primary_tag}}
                 <a class="post-card-primary-tag" href="{{url}}" >{{name}}</a>
@@ -23,22 +24,10 @@
             <div class="post-card-excerpt">{{excerpt}}</div>
             {{/if}}
         </a>
-
-
-
-        <footer class="post-card-meta">
-            <time class="post-card-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
-            {{#if reading_time}}
-                <span class="post-card-meta-length">{{reading_time}}</span>
-            {{/if}}
-            {{#if @site.comments_enabled}}
-                {{comment_count}}
-            {{/if}}
-        </footer>
     </div>
 
     {{#if feature_image}}
-    <a class="post-card-image-link" href="{{url}}">
+    <a class="post-card-image-link col-2 col-sm-3 col-md-2 col-lg-2 col-xl-2 float-end" href="{{url}}">
 
         {{!-- This is a responsive image, it loads different sizes depending on device
         https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
@@ -68,5 +57,9 @@
 
     </a>
     {{/if}}
+
+       
+    
+
 
 </article>
